log/build_2024-02-02_17-17-08/my_py_pkg/stderr.log
  File "/home/sambhav/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/robot_news_station.py", line 2
    0000000import rclpy
          ^
SyntaxError: invalid decimal literal

